--- a/src/main/res/values/themes.xml
+++ b/src/main/res/values/themes.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.SemScan" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <!-- Using Light theme instead of DayNight to force light mode regardless of system settings -->
+    <style name="Theme.SemScan" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
