--- a/src/main/res/layout/activity_degree_selection.xml
+++ b/src/main/res/layout/activity_degree_selection.xml
@@ -39,7 +39,8 @@
             android:layout_marginBottom="16dp"
             android:foreground="?attr/selectableItemBackground"
             app:cardCornerRadius="@dimen/onboarding_card_corner_radius"
-            app:cardElevation="@dimen/onboarding_card_elevation">
+            app:cardElevation="@dimen/onboarding_card_elevation"
+            app:cardBackgroundColor="@color/white">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -83,7 +84,8 @@
             android:layout_height="wrap_content"
             android:foreground="?attr/selectableItemBackground"
             app:cardCornerRadius="@dimen/onboarding_card_corner_radius"
-            app:cardElevation="@dimen/onboarding_card_elevation">
+            app:cardElevation="@dimen/onboarding_card_elevation"
+            app:cardBackgroundColor="@color/white">
 
             <LinearLayout
                 android:layout_width="match_parent"
