--- a/src/main/res/layout/activity_presenter_start_session.xml
+++ b/src/main/res/layout/activity_presenter_start_session.xml
@@ -60,6 +60,7 @@
                     android:layout_marginTop="24dp"
                     app:cardCornerRadius="16dp"
                     app:cardElevation="4dp"
+                    app:cardBackgroundColor="@color/white"
                     android:visibility="gone">
 
                     <LinearLayout
