--- a/src/main/res/layout/activity_role_context.xml
+++ b/src/main/res/layout/activity_role_context.xml
@@ -38,7 +38,8 @@
             android:layout_marginBottom="16dp"
             android:foreground="?attr/selectableItemBackground"
             app:cardCornerRadius="@dimen/onboarding_card_corner_radius"
-            app:cardElevation="@dimen/onboarding_card_elevation">
+            app:cardElevation="@dimen/onboarding_card_elevation"
+            app:cardBackgroundColor="@color/white">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -69,7 +70,8 @@
             android:layout_marginBottom="16dp"
             android:foreground="?attr/selectableItemBackground"
             app:cardCornerRadius="@dimen/onboarding_card_corner_radius"
-            app:cardElevation="@dimen/onboarding_card_elevation">
+            app:cardElevation="@dimen/onboarding_card_elevation"
+            app:cardBackgroundColor="@color/white">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -99,7 +101,8 @@
             android:layout_height="wrap_content"
             android:foreground="?attr/selectableItemBackground"
             app:cardCornerRadius="@dimen/onboarding_card_corner_radius"
-            app:cardElevation="@dimen/onboarding_card_elevation">
+            app:cardElevation="@dimen/onboarding_card_elevation"
+            app:cardBackgroundColor="@color/white">
 
             <LinearLayout
                 android:layout_width="match_parent"
