--- a/src/main/res/layout/activity_settings.xml
+++ b/src/main/res/layout/activity_settings.xml
@@ -59,11 +59,11 @@
                         android:layout_height="56dp"
                         android:background="@drawable/edittext_background"
                         android:padding="16dp"
+                        android:textColor="@color/gray_900"
+                        android:textColorHint="@color/gray_600"
                         android:hint="Enter your username"
                         android:inputType="textEmailAddress"
-                        android:textSize="16sp"
-                        android:textColor="@color/gray_800"
-                        android:textColorHint="@color/gray_500" />
+                        android:textSize="16sp" />
 
                 </LinearLayout>
 
