--- a/src/main/res/layout/activity_test_email.xml
+++ b/src/main/res/layout/activity_test_email.xml
@@ -13,7 +13,8 @@
         android:layout_height="wrap_content"
         app:cardCornerRadius="16dp"
         app:cardElevation="4dp"
-        app:strokeWidth="0dp">
+        app:strokeWidth="0dp"
+        app:cardBackgroundColor="@color/white">
 
         <LinearLayout
             android:layout_width="match_parent"
