--- a/src/main/res/layout/card_presenter_action_my_slot.xml
+++ b/src/main/res/layout/card_presenter_action_my_slot.xml
@@ -10,6 +10,7 @@
     app:cardCornerRadius="16dp"
     app:cardElevation="2dp"
     app:strokeWidth="0dp"
+    app:cardBackgroundColor="@color/white"
     android:clickable="true"
     android:focusable="true"
     android:foreground="?android:attr/selectableItemBackground">
