--- a/src/main/res/layout/item_manual_session.xml
+++ b/src/main/res/layout/item_manual_session.xml
@@ -8,6 +8,7 @@
     android:layout_marginEnd="16dp"
     app:cardCornerRadius="16dp"
     app:cardElevation="4dp"
+    app:cardBackgroundColor="@color/white"
     android:clickable="true"
     android:focusable="true"
     android:foreground="?android:attr/selectableItemBackground">
