--- a/src/main/res/layout/item_presenter_seminar_tile.xml
+++ b/src/main/res/layout/item_presenter_seminar_tile.xml
@@ -6,7 +6,8 @@
     android:layout_margin="6dp"
     app:cardCornerRadius="12dp"
     app:cardUseCompatPadding="true"
-    app:cardElevation="3dp">
+    app:cardElevation="3dp"
+    app:cardBackgroundColor="@color/white">
 
     <LinearLayout
         android:layout_width="match_parent"
