--- a/src/main/res/layout/item_presenter_slot.xml
+++ b/src/main/res/layout/item_presenter_slot.xml
@@ -8,7 +8,8 @@
     android:focusable="true"
     android:foreground="?android:attr/selectableItemBackground"
     app:cardCornerRadius="16dp"
-    app:cardElevation="4dp">
+    app:cardElevation="4dp"
+    app:cardBackgroundColor="@color/white">
 
     <LinearLayout
         android:layout_width="match_parent"
